Remove Shaderc

Shaderc currently does not build and is used in a Vulkan test.
The upstream version of Shaderc has fixed the issue preventing the
build. However, we may not actually want Shaderc.

Currently, Shaderc is only being used in a unit test. It is possible
that in the future we will want to compiler GLSL at runtime. But there
are no plans for that right now.

BUG=852620

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I4edc119b6fe36851901a0b03924613c161db7c7e
Reviewed-on: https://chromium-review.googlesource.com/1100298
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Chris Blume <cblume@chromium.org>
Commit-Queue: Chris Blume <cblume@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567093}
Former-commit-id: 7f7dd90b6e4a8db6eb2b05dacfe1d94b9a90370e