gpu/vulkan/vulkan_shader_module.h
@@ -25,10 +25,6 @@ class VULKAN_EXPORT VulkanShaderModule {
   explicit VulkanShaderModule(VulkanDeviceQueue* device_queue);
   ~VulkanShaderModule();
 
-  bool InitializeGLSL(ShaderType type,
-                      std::string name,
-                      std::string entry_point,
-                      std::string source);
   bool InitializeSPIRV(ShaderType type,
                        std::string name,
                        std::string entry_point,
